check if everything works
