# internal/handler/product/router.go
@@ -2,12 +2,13 @@ package product
 
 import (
 	"context"
-	"io"
+	"net/http"
+	"os"
 	"regexp"
 
 	"github.com/AnisaForWork/user_orders/internal/handler/error/mapper"
+	"github.com/AnisaForWork/user_orders/internal/repository/mysql"
 	"github.com/AnisaForWork/user_orders/internal/service/product"
-	"github.com/signintech/gopdf"
 
 	"github.com/gin-gonic/gin"
 )
@@ -18,8 +19,8 @@ type Service interface {
 	UserProducts(ctx context.Context, page, prodsPerPage int, login string) ([]product.Product, error)
 	Delete(ctx context.Context, login string, barcode string) error
 	UserProduct(ctx context.Context, barcode string, login string) (*product.Product, error)
-	GenCheck(ctx context.Context, barcode string, login string) (gopdf.GoPdf, error)
-	UserProductCheck(ctx context.Context, filename string, login string) (io.Reader, error)
+	GenCheck(ctx context.Context, barcode string, login string) (*os.File, error)
+	UserProductCheck(ctx context.Context, filename string, login string) (*os.File, error)
 }
 
 type Router struct {
@@ -30,7 +31,12 @@ type Router struct {
 
 func NewRouter(service Service) *Router {
 	mapping := mapper.NewErrorMapper(
-		mapper.ErrorMap{},
+		mapper.ErrorMap{
+			mysql.ErrNoRows:              mapper.ErrorInfo{StatusCode: http.StatusNotFound, Msg: "Can't find"},
+			mysql.ErrUniqConstrViolation: mapper.ErrorInfo{StatusCode: http.StatusConflict, Msg: "Already exists"},
+			product.ErrNotExists:         mapper.ErrorInfo{StatusCode: http.StatusNotFound, Msg: "Can't find"},
+			product.ErrNotOwner:          mapper.ErrorInfo{StatusCode: http.StatusForbidden, Msg: "Can't do it"},
+		},
 	)
 
 	barcodeRegex := regexp.MustCompile(`^[0-9]{10}$`)
@@ -48,9 +54,9 @@ func (p *Router) InitRoutes() *gin.Engine {
 	r := gin.New()
 	r.POST("/", p.create)
 	r.GET("/all", p.allUserProducts)
-	r.GET("/:id", p.userProduct)
-	r.DELETE("/:id", p.delete)
-	r.GET("/:id/check", p.genCheck)
+	r.GET("/:barcode", p.userProduct)
+	r.DELETE("/:barcode", p.delete)
+	r.GET("/:barcode/check", p.genCheck)
 	r.GET("/check/:checkName", p.productCheck)
 	return r
 }
